# org.deepin.browser

./: .gitignore  .gn  BUILD.gn  README.md  first_build.sh  modify_build.sh  run.sh
ash/strings/: ash_strings_zh-CN.xtb
base/: BUILD.gn  linux_util.cc  linux_util.h  logging.cc  logging.h  observer_list_internal.h
base/files/: file_util_posix.cc
base/memory/: weak_ptr.h
base/message_loop/: message_pump_libevent.cc
base/metrics/: statistics_recorder.cc
base/strings/: stringprintf.cc
base/test/: BUILD.gn
base/time/: time.cc
cacerts_preset/: add_certs.sh  关于如何预置至根证书操作.wps
cacerts_preset/360CA/: BJCA Global Root CA4  UCA Root SM2  UniTrust Global Root CA R3  oca1sm2.cer  rcaoca1sm2.cer
cacerts_preset/中国银行/: CFCA CS SM2 CA.crt  O=CFCA SM2 OCA1,C=CN
cacerts_preset/国家根/: add_certs.sh
cc/: BUILD.gn
cc/layers/: scrollbar_layer_impl_base.cc  scrollbar_layer_impl_base.h
chrome/: BUILD.gn  chrome_paks.gni
chrome/app/: BUILD.gn  DEPS  bookmarks_strings.grdp  chrome_command_ids.h  chrome_crash_reporter_client.cc  chrome_main_delegate.cc  chrome_main_delegate.h  chromium_strings.grd  extensions_strings.grdp  generated_resources.grd  settings_chromium_strings.grdp  settings_strings.grdp
chrome/browser/: BUILD.gn  about_flags.cc  active_use_util.cc  browser_about_handler.cc  browser_process_impl.cc  browser_resources.grd  chrome_browser_main_linux.cc  chrome_content_browser_client.cc  chrome_notification_types.h  flag-metadata.json  shell_integration_linux.cc
chrome/browser/resources/settings/driver_manage_page/: BUILD.gn  driver_manage_browser_proxy.html  driver_manage_browser_proxy.js  driver_manage_dialog.html  driver_manage_dialog.js  driver_manage_entry.html  driver_manage_entry.js  driver_manage_entry_css.html  driver_manage_list.html  driver_manage_list.js  driver_manage_page.html  driver_manage_page.js
chrome/browser/resources/settings/driver_page/: BUILD.gn  driver_page.html  driver_page.js
chrome/common/: channel_info_posix.cc  chrome_constants.cc  chrome_constants.h  chrome_content_client.h  chrome_content_client_constants.cc  chrome_features.cc  chrome_paths.cc  chrome_paths.h  chrome_paths_linux.cc  chrome_switches.cc  chrome_switches.h  logging_chrome.cc  pref_names.cc  pref_names.h  webui_url_constants.cc  webui_url_constants.h
chrome/plugin/: BUILD.gn  chrome_content_plugin_client.cc  chrome_content_plugin_client.h
chrome/renderer/: BUILD.gn  chrome_content_renderer_client.cc  chrome_content_renderer_client.h
chrome/test/: BUILD.gn
chrome/updater/: configurator.cc
components/: components_chromium_strings.grd  error_page_strings.grdp  javascript_dialogs_strings.grdp  new_or_sad_tab_strings.grdp  omnibox_strings.grdp  password_manager_strings.grdp  security_interstitials_strings.grdp
components/constrained_window/: constrained_window_views.cc
components/crx_file/: crx_verifier.cc  crx_verifier.h
components/device_event_log/: device_event_log_impl.cc
components/gcm_driver/: gcm_client_impl.cc
components/javascript_dialogs/: app_modal_dialog_controller.cc  app_modal_dialog_controller.h  app_modal_dialog_manager.cc  app_modal_dialog_manager.h  tab_modal_dialog_manager.cc  (+1 more)
content/: BUILD.gn  DEPS
content/browser/renderer_host/npapi/: BUILD.gn  gtk_plugin_container_manager.cc  gtk_plugin_container_manager.h
content/child/: BUILD.gn  multipart_response_delegate.cc  multipart_response_delegate.h  plugin_message_generator.cc  plugin_message_generator.h  plugin_messages.h  plugin_param_traits.cc  plugin_param_traits.h  request_info.cc  request_info.h
content/child/npapi/: np_channel_base.cc  np_channel_base.h  npobject_proxy.cc  npobject_stub.cc  npobject_util.cc  npruntime_util.cc  plugin_host.cc  plugin_host.h  plugin_instance.cc  plugin_instance.h  plugin_lib.cc  plugin_lib.h  plugin_stream.cc  plugin_stream_url.cc  plugin_stream_url.h  plugin_url_fetcher.cc  plugin_url_fetcher.h  webplugin.h  webplugin_delegate.h  webplugin_delegate_impl.cc  webplugin_delegate_impl.h  webplugin_delegate_impl_android.cc  webplugin_delegate_impl_aura.cc  webplugin_delegate_impl_gtk.cc  webplugin_resource_client.h
content/plugin/: BUILD.gn  plugin_channel.cc  plugin_channel.h  plugin_main.cc  plugin_main_linux.cc  plugin_thread.cc  plugin_thread.h  webplugin_delegate_stub.cc  webplugin_delegate_stub.h  webplugin_proxy.cc  webplugin_proxy.h
courgette/: BUILD.gn
crypto/: nss_util.cc
dbus/: bus.cc  message.cc  message.h  object_proxy.cc
debian/: browser.xml  changelog  clean  control  initial_bookmarks.html  org.deepin.browser.bug-control  org.deepin.browser.desktop  org.deepin.browser.dirs  org.deepin.browser.install  org.deepin.browser.links  org.deepin.browser.lintian-overrides  org.deepin.browser.manpages  org.deepin.browser.postinst  org.deepin.browser.prerm  org.deepin.browserdriver.install  org.deepin.browserdriver.links  rules
gpu/: BUILD.gn
headless/: BUILD.gn
ipc/: ipc_channel_handle.h  ipc_message_start.h  ipc_message_utils.cc  ipc_sync_channel.cc  ipc_sync_channel.h  ipc_sync_message.cc  ipc_sync_message.h
media/: BUILD.gn  media_options.gni
net/: BUILD.gn
skia/: BUILD.gn
ui/views/: view.h  (+4 more)
uos/: BUILD.gn  dbus_client.h  dbus_clients_browser.cc  dbus_clients_browser.h  dbus_method_call_status.h  dbus_thread_manager.cc  dbus_thread_manager.h  uos_export.h
uos/customize_new_tabs/: BUILD.gn  customize_newtabs_core.cc  customize_newtabs_core.h  newtabs_thread_manager.cc  newtabs_thread_manager.h
uos/database/: BUILD.gn  DEPS  database_clients_browser.cc  database_clients_browser.h  database_thread_manager.cc  database_thread_manager.h  risky_urls_database.cc  risky_urls_database.h
uos/dde/: BUILD.gn  dde_appearance_color_client.cc  dde_appearance_color_client.h  dde_appearance_theme_client.cc  dde_appearance_theme_client.h  dde_constants.h  dde_help_client.cc  dde_help_client.h  dde_manual_util.cc  dde_manual_util.h  dde_mime_client.cc  dde_mime_client.h  dde_password_auth_client.cc  dde_password_auth_client.h  dde_vm_compositing_client.cc  dde_vm_compositing_client.h
uos_nssdb/: cert9.db  key4.db  pkcs11.txt
(+1495 files in other folders)
