# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

assert(use_dbus)

component ("uos")  {
    deps = [
    "dde",
    "database",
    "customize_new_tabs",
  ]

  public_deps = [
    "//dbus",
  ]

  sources = [
    "dbus_client.h",
    "dbus_clients_browser.cc",
    "dbus_clients_browser.h",
    "dbus_method_call_status.h",
    "dbus_thread_manager.cc",
    "dbus_thread_manager.h"
  ]
}

source_set("uos_export") {
  deps = [ "//base" ]
  sources = [ "uos_export.h" ]
}
