# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

#import("//build/config/features.gni")
import("//ppapi/buildflags/buildflags.gni")
import("//third_party/blink/public/public_features.gni")
import("//build/config/linux/gtk/gtk.gni")

# This is the NPAPI plugin process.
if (enable_plugins) {
  source_set("plugin") {
    # Only the public target should depend on this. All other targets (even
    # internal content ones) should depend on the public one.
#    visibility = [ "//content/public/plugin:plugin_sources" ]

    sources = [
      "plugin_channel.cc",
      "plugin_channel.h",
      "plugin_main.cc",
      "plugin_main_linux.cc",
      "plugin_thread.cc",
      "plugin_thread.h",
      "webplugin_delegate_stub.cc",
      "webplugin_delegate_stub.h",
      "webplugin_proxy.cc",
      "webplugin_proxy.h",
    ]

    configs += [ "//content:content_implementation",
                 "//build/config/linux/gtk:gtk_internal_config", ]

    deps = [
      "//content:export",
      "//content/child",
      "//content/public/common:common_sources",
      #"//mojo/shell/public/interfaces",
      "//skia",
      "//third_party/blink/public:blink",
      "//third_party/npapi",
      "//ui/gfx",
      "//ui/surface",
    ]

    if (is_win) {
      deps += [ "//sandbox" ]
    }
  }
} else {
  # This way it can be unconditionally depended on.
  group("plugin") {
  }
}
