# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")
import("//tools/polymer/polymer.gni")
import("//ui/webui/resources/tools/js_modulizer.gni")
import("../settings.gni")

js_type_check("closure_compile") {
  deps = [
    ":driver_manage_dialog",
    ":driver_manage_entry",
    ":driver_manage_browser_proxy",
    ":driver_manage_list",
    ":driver_manage_page",
  ]
}

js_library("driver_manage_dialog") {
  deps = [
    ":driver_manage_browser_proxy",
    "//ui/webui/resources/cr_elements/cr_dialog:cr_dialog",
    "//ui/webui/resources/js:cr",
    "//ui/webui/resources/js:load_time_data",
    "//ui/webui/resources/js:web_ui_listener_behavior",
  ]
}

js_library("driver_manage_entry") {
  deps = [
    ":driver_manage_browser_proxy",
    "//ui/webui/resources/cr_elements/cr_action_menu:cr_action_menu",
    "//ui/webui/resources/js:assert",
    "//ui/webui/resources/js:cr",
    "//ui/webui/resources/js:icon",
    "//ui/webui/resources/js/cr/ui:focus_row_behavior",
    "//ui/webui/resources/js/cr/ui:focus_without_ink",
  ]
}

js_library("driver_manage_browser_proxy") {
  deps = [
    "//ui/webui/resources/js:cr",
    "//ui/webui/resources/js:web_ui_listener_behavior",
  ]
}

js_library("driver_manage_list") {
  deps = [
    ":driver_manage_browser_proxy",
    "//ui/webui/resources/js:cr",
  ]
}

js_library("driver_manage_page") {
  deps = [
    ":driver_manage_browser_proxy",
    "..:global_scroll_target_behavior",
    "..:route",
    "//third_party/polymer/v1_0/components-chromium/iron-list:iron-list-extracted",
    "//third_party/polymer/v1_0/components-chromium/iron-resizable-behavior:iron-resizable-behavior-extracted",
    "//ui/webui/resources/js:assert",
    "//ui/webui/resources/js:cr",
    "//ui/webui/resources/js:load_time_data",
    "//ui/webui/resources/js/cr/ui:focus_without_ink",
  ]
}

js_type_check("closure_compile_module") {
  is_polymer3 = true
  deps = [
    ":driver_manage_dialog.m",
    ":driver_manage_entry.m",
    ":driver_manage_browser_proxy.m",
    ":driver_manage_list.m",
    ":driver_manage_page.m",
  ]
}

js_library("driver_manage_dialog.m") {
  sources = [ "$root_gen_dir/chrome/browser/resources/settings/driver_manage_page/driver_manage_dialog.m.js" ]
  deps = [
    ":driver_manage_browser_proxy.m",
    "..:i18n_setup.m",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
    "//ui/webui/resources/cr_elements/cr_dialog:cr_dialog.m",
    "//ui/webui/resources/js:web_ui_listener_behavior.m",
  ]
  extra_deps = [ ":driver_manage_dialog_module" ]
}

js_library("driver_manage_entry.m") {
  sources = [ "$root_gen_dir/chrome/browser/resources/settings/driver_manage_page/driver_manage_entry.m.js" ]
  deps = [
    ":driver_manage_browser_proxy.m",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
    "//ui/webui/resources/cr_elements/cr_action_menu:cr_action_menu.m",
    "//ui/webui/resources/js:assert.m",
    "//ui/webui/resources/js/cr/ui:focus_row_behavior.m",
  ]
  extra_deps = [ ":driver_manage_entry_module" ]
}

js_library("driver_manage_browser_proxy.m") {
  sources = [ "$root_gen_dir/chrome/browser/resources/settings/driver_manage_page/driver_manage_browser_proxy.m.js" ]
  deps = [ "//ui/webui/resources/js:cr.m" ]
  extra_deps = [ ":modulize" ]
}

js_library("driver_manage_list.m") {
  sources = [ "$root_gen_dir/chrome/browser/resources/settings/driver_manage_page/driver_manage_list.m.js" ]
  deps = [
    ":driver_manage_browser_proxy.m",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
  ]
  extra_deps = [ ":driver_manage_list_module" ]
}

js_library("driver_manage_page.m") {
  sources = [ "$root_gen_dir/chrome/browser/resources/settings/driver_manage_page/driver_manage_page.m.js" ]
  deps = [
    ":driver_manage_browser_proxy.m",
    "..:global_scroll_target_behavior.m",
    "..:settings_routes.m",
    "//third_party/polymer/v3_0/components-chromium/iron-list",
    "//third_party/polymer/v3_0/components-chromium/polymer:polymer_bundled",
    "//ui/webui/resources/js:assert.m",
    "//ui/webui/resources/js:web_ui_listener_behavior.m",
  ]
  extra_deps = [ ":driver_manage_page_module" ]
}

group("polymer3_elements") {
  public_deps = [
    ":modulize",
    ":driver_manage_dialog_module",
    ":driver_manage_entry_css_module",
    ":driver_manage_entry_module",
    ":driver_manage_list_module",
    ":driver_manage_page_module",
  ]
}

polymer_modulizer("driver_manage_dialog") {
  js_file = "driver_manage_dialog.js"
  html_file = "driver_manage_dialog.html"
  html_type = "dom-module"
  namespace_rewrites = settings_namespace_rewrites
  auto_imports = settings_auto_imports + [ "chrome/browser/resources/settings/driver_manage_page/driver_manage_browser_proxy.html|DriverManageBrowserProxyImpl,DriverManageBrowserProxy,DriverManage,DriverManageInfo" ]
}

polymer_modulizer("driver_manage_entry") {
  js_file = "driver_manage_entry.js"
  html_file = "driver_manage_entry.html"
  html_type = "dom-module"
  namespace_rewrites = settings_namespace_rewrites
  auto_imports = settings_auto_imports + [
                   "chrome/browser/resources/settings/driver_manage_page/driver_manage_browser_proxy.html|DriverManageBrowserProxyImpl,DriverManageBrowserProxy,DriverManage",
                   "ui/webui/resources/cr_elements/cr_action_menu/cr_action_menu.html|AnchorAlignment",
                   "ui/webui/resources/html/assert.html|assert",
                 ]
}

polymer_modulizer("driver_manage_entry_css") {
  js_file = "driver_manage_entry_css.m.js"
  html_file = "driver_manage_entry_css.html"
  html_type = "style-module"
}
polymer_modulizer("driver_manage_list") {
  js_file = "driver_manage_list.js"
  html_file = "driver_manage_list.html"
  html_type = "dom-module"
  auto_imports = [ "chrome/browser/resources/settings/driver_manage_page/driver_manage_browser_proxy.html|DriverManage" ]
}

polymer_modulizer("driver_manage_page") {
  js_file = "driver_manage_page.js"
  html_file = "driver_manage_page.html"
  html_type = "dom-module"
  namespace_rewrites = settings_namespace_rewrites
  auto_imports = settings_auto_imports + [
                   "chrome/browser/resources/settings/driver_manage_page/driver_manage_browser_proxy.html|DriverManageBrowserProxyImpl,DriverManage,DriverManageInfo",
                   "chrome/browser/resources/settings/route.html|routes",
                   "ui/webui/resources/html/assert.html|assert",
                   "ui/webui/resources/html/polymer.html|afterNextRender,html,Polymer",
                 ]
}

js_modulizer("modulize") {
  input_files = [ "driver_manage_browser_proxy.js" ]
  namespace_rewrites = settings_namespace_rewrites
}
